@@ -1,31 +1,34 @@
 package com.moden.modenapi.modules.designer.service;
 
 import com.moden.modenapi.common.enums.DesignerStatus;
+import com.moden.modenapi.common.enums.Position;
+import com.moden.modenapi.common.enums.Role;
 import com.moden.modenapi.common.service.BaseService;
-import com.moden.modenapi.common.utils.IdGenerator;
+import com.moden.modenapi.modules.auth.model.AuthLocal;
 import com.moden.modenapi.modules.auth.model.User;
+import com.moden.modenapi.modules.auth.repository.AuthLocalRepository;
 import com.moden.modenapi.modules.auth.repository.UserRepository;
-import com.moden.modenapi.modules.auth.service.AuthLocalService;
-import com.moden.modenapi.modules.designer.dto.DesignerCreateDto;
-import com.moden.modenapi.modules.designer.dto.DesignerResponse;
-import com.moden.modenapi.modules.designer.dto.PortfolioItemRes;
+import com.moden.modenapi.modules.designer.dto.*;
 import com.moden.modenapi.modules.designer.model.DesignerDetail;
 import com.moden.modenapi.modules.designer.model.DesignerPortfolioItem;
 import com.moden.modenapi.modules.designer.repository.DesignerDetailRepository;
 import com.moden.modenapi.modules.designer.repository.DesignerPortfolioItemRepository;
-import com.moden.modenapi.security.JwtProvider;
+import com.moden.modenapi.modules.studio.repository.HairStudioDetailRepository;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.http.HttpStatus;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.security.SecureRandom;
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
-
-import static com.moden.modenapi.common.enums.Role.DESIGNER;
+import java.util.stream.IntStream;
 
 @Service
 @RequiredArgsConstructor
@@ -33,277 +36,241 @@ import static com.moden.modenapi.common.enums.Role.DESIGNER;
 public class DesignerService extends BaseService<DesignerDetail> {
 
     private final DesignerDetailRepository designerRepository;
-    private final DesignerPortfolioItemRepository portfolioRepository;
+    private final DesignerPortfolioItemRepository portfolioRepo;
+    private final HairStudioDetailRepository hairStudioRepo;
     private final UserRepository userRepository;
-    private final AuthLocalService authLocalService;
-    private final JwtProvider jwtProvider;
-    private final HttpServletRequest request;
+    private final AuthLocalRepository authLocalRepository;
+    private final PasswordEncoder passwordEncoder;
 
     @Override
-    protected DesignerDetailRepository getRepository() {
+    protected JpaRepository<DesignerDetail, UUID> getRepository() {
         return designerRepository;
     }
 
-    // ----------------------------------------------------------------------
-    // CREATE (by Studio/Admin)
-    // ----------------------------------------------------------------------
-    public DesignerResponse createDesigner(DesignerCreateDto req) {
-        UUID studioId = req.hairStudioId();
-        if (studioId == null) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "hairStudioId is required");
+    /* ===================== CREATE ===================== */
+
+    /** Studio creates designer. hairStudioId is taken from current studio (token principal). */
+    public DesignerResponse createDesigner(HttpServletRequest request, DesignerCreateDto req) {
+        ensureStudioRole();
+
+        UUID currentUserId = getCurrentUserIdOrThrow();
+        var myStudios = hairStudioRepo.findActiveByUserIdOrderByUpdatedDesc(currentUserId, PageRequest.of(0, 1));
+        if (myStudios.isEmpty()) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Studio not found for current user");
+        }
+        UUID studioId = myStudios.get(0).getId();
+
+        String rawPwd = req.password() == null ? "" : req.password().trim();
+        if (rawPwd.length() < 8) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Password must be at least 8 characters");
         }
 
-        String loginCode = (req.idForLogin() == null || req.idForLogin().isBlank())
-                ? generateUniqueDesignerCode()
-                : req.idForLogin().trim();
-
-        if (designerRepository.existsByIdForLogin(loginCode)) {
-            throw new ResponseStatusException(HttpStatus.CONFLICT,
-                    "Designer login ID already exists: " + loginCode);
+        String loginCode = generateDesignerLoginCode();
+        int guard = 0;
+        while (designerRepository.existsByIdForLogin(loginCode)) {
+            if (++guard > 20) throw new ResponseStatusException(HttpStatus.CONFLICT, "Cannot generate unique login ID");
+            loginCode = generateDesignerLoginCode();
         }
 
-        // 1) User with role DESIGNER
-        String phone = (req.phone() != null && !req.phone().isBlank()) ? req.phone().trim() : "UNKNOWN";
-        User user = User.builder()
-                .phone(phone)
-                .role(DESIGNER)
-                .build();
-        userRepository.save(user);
+        // Upsert User (force role=DESIGNER)
+        String phone = req.phone().trim();
+        String fullName = req.fullName() == null ? null : req.fullName().trim();
 
-        // 2) DesignerDetail (portfolio IDs initially empty)
-        DesignerDetail designer = DesignerDetail.builder()
+        User user = userRepository.findByPhone(phone).orElse(null);
+        if (user == null) {
+            user = User.builder()
+                    .fullName(fullName)
+                    .phone(phone)
+                    .role(Role.DESIGNER)
+                    .build();
+        } else {
+            user.setFullName(fullName);
+            user.setRole(Role.DESIGNER);
+        }
+        user = userRepository.save(user);
+
+        // Save password (AuthLocal)
+        AuthLocal authLocal = authLocalRepository.findByUserId(user.getId()).orElse(null);
+        if (authLocal == null) {
+            authLocal = AuthLocal.builder()
+                    .userId(user.getId())
+                    .passwordHash(passwordEncoder.encode(rawPwd))
+                    .passwordUpdatedAt(Instant.now())
+                    .build();
+        } else {
+            authLocal.setPasswordHash(passwordEncoder.encode(rawPwd));
+            authLocal.setPasswordUpdatedAt(Instant.now());
+        }
+        authLocalRepository.save(authLocal);
+
+        // DesignerDetail
+        DesignerDetail d = DesignerDetail.builder()
                 .userId(user.getId())
                 .hairStudioId(studioId)
                 .idForLogin(loginCode)
                 .bio(req.bio())
-                .position(req.position())
-                .status(DesignerStatus.WORKING)
-                .portfolioItemIds(new ArrayList<>())   // ✅ use list, not JSON
+                .position(req.position() != null ? req.position() : Position.DESIGNER)
+                .status(req.status() != null ? req.status() : DesignerStatus.WORKING)
+                .portfolioItemIds(new ArrayList<>())
                 .build();
 
-        create(designer);
+        d = create(d);
 
-        // 3) password → local store
-        if (req.password() != null && !req.password().isBlank()) {
-            authLocalService.createOrUpdatePassword(user.getId(), req.password());
-        }
-
-        return mapToRes(designer, user);
+        return mapToRes(d, user, List.of());
     }
 
-    // ----------------------------------------------------------------------
-    // UPDATE (by Designer)
-    // ----------------------------------------------------------------------
-    public DesignerResponse updateProfile(String bio,
-                                          String portfolioUrlDeprecated, // kept for backward compat; ignored
-                                          String phone,
-                                          String idForLogin,
-                                          String positionStr) {
-        UUID userId = extractUserIdFromToken();
+    /* ===================== UPDATE (SELF) ===================== */
 
-        DesignerDetail d = designerRepository.findByUserId(userId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Designer profile not found"));
-        if (d.getDeletedAt() != null)
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Designer has been deleted");
+    /** Designer updates own profile */
+    public DesignerResponse updateOwnProfile(HttpServletRequest request, DesignerUpdateReq req) {
+        UUID currentUserId = getCurrentUserIdOrThrow();
 
-        if (bio != null) d.setBio(bio);
+        DesignerDetail d = designerRepository.findByUserIdAndDeletedAtIsNull(currentUserId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Designer not found"));
 
-        if (idForLogin != null && !idForLogin.isBlank()) {
-            String trimmed = idForLogin.trim();
-            if (!trimmed.equalsIgnoreCase(d.getIdForLogin()) && designerRepository.existsByIdForLogin(trimmed)) {
-                throw new ResponseStatusException(HttpStatus.CONFLICT, "Login ID already in use");
-            }
-            d.setIdForLogin(trimmed);
+        if (req.bio() != null) d.setBio(req.bio());
+        if (req.phone() != null) {
+            userRepository.findById(d.getUserId()).ifPresent(u -> {
+                u.setPhone(req.phone());
+                userRepository.save(u);
+            });
         }
-
-        if (positionStr != null && !positionStr.isBlank()) {
-            try {
-                var pos = com.moden.modenapi.common.enums.Position.valueOf(positionStr);
-                d.setPosition(pos);
-            } catch (IllegalArgumentException e) {
-                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid position: " + positionStr);
-            }
+        if (req.position() != null) {
+            try { d.setPosition(Position.valueOf(req.position())); } catch (Exception ignore) {}
         }
-
-        // optional: update phone on User
-        if (phone != null && !phone.isBlank()) {
-            User u = userRepository.findById(userId)
-                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-            u.setPhone(phone.trim());
-            userRepository.save(u);
+        if (req.status() != null) {
+            try { d.setStatus(DesignerStatus.valueOf(req.status())); } catch (Exception ignore) {}
         }
-
         update(d);
 
-        // reload user for mapping
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-        return mapToRes(d, user);
+        var user = userRepository.findById(d.getUserId()).orElse(null);
+        var items = portfolioRepo.findAllByDesignerIdAndDeletedAtIsNullOrderByCreatedAtAsc(d.getId())
+                .stream().map(it -> new PortfolioItemRes(it.getId(), it.getImageUrl(), it.getCaption())).toList();
+
+        return mapToRes(d, user, items);
     }
 
-    // ----------------------------------------------------------------------
-    // STATUS (근무중/휴가/교육) change
-    // ----------------------------------------------------------------------
-    public DesignerResponse changeStatus(UUID designerId, DesignerStatus status) {
-        DesignerDetail d = designerRepository.findActiveById(designerId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Designer not found or deleted"));
-        d.setStatus(status);
-        update(d);
-
-        User u = userRepository.findById(d.getUserId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-        return mapToRes(d, u);
-    }
-
-    // ----------------------------------------------------------------------
-    // PORTFOLIO ID management  (List<UUID> only)
-    // ----------------------------------------------------------------------
-    public DesignerResponse replacePortfolio(UUID designerId, List<UUID> newItemIds) {
-        DesignerDetail d = designerRepository.findActiveById(designerId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Designer not found or deleted"));
-
-        d.setPortfolioItemIds(distinctIds(newItemIds));
-        update(d);
-
-        User u = userRepository.findById(d.getUserId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-        return mapToRes(d, u);
-    }
-
-    public DesignerResponse addPortfolio(UUID designerId, List<UUID> itemIdsToAdd) {
-        DesignerDetail d = designerRepository.findActiveById(designerId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Designer not found or deleted"));
-
-        List<UUID> current = new ArrayList<>(Optional.ofNullable(d.getPortfolioItemIds()).orElseGet(ArrayList::new));
-        current.addAll(itemIdsToAdd);
-        d.setPortfolioItemIds(distinctIds(current));
-        update(d);
-
-        User u = userRepository.findById(d.getUserId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-        return mapToRes(d, u);
-    }
-
-    public DesignerResponse removePortfolio(UUID designerId, UUID itemId) {
-        DesignerDetail d = designerRepository.findActiveById(designerId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Designer not found or deleted"));
-
-        List<UUID> current = new ArrayList<>(Optional.ofNullable(d.getPortfolioItemIds()).orElseGet(ArrayList::new));
-        boolean changed = current.removeIf(id -> id.equals(itemId));
-        if (!changed) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Item not attached to this designer");
-        }
-        d.setPortfolioItemIds(current);
-        update(d);
-
-        User u = userRepository.findById(d.getUserId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-        return mapToRes(d, u);
-    }
-
-    // ----------------------------------------------------------------------
-    // READ
-    // ----------------------------------------------------------------------
-    @Transactional(readOnly = true)
-    public DesignerResponse getCurrentDesignerProfile() {
-        UUID userId = extractUserIdFromToken();
-
-        DesignerDetail d = designerRepository.findByUserId(userId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Designer profile not found"));
-        if (d.getDeletedAt() != null)
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Designer has been deleted");
-
-        User u = userRepository.findById(userId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-        return mapToRes(d, u);
-    }
+    /* ===================== READ ===================== */
 
     @Transactional(readOnly = true)
     public DesignerResponse getProfile(UUID designerId) {
-        DesignerDetail d = designerRepository.findActiveById(designerId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Designer not found or deleted"));
-        User u = userRepository.findById(d.getUserId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-        return mapToRes(d, u);
+        var d = designerRepository.findActiveById(designerId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Designer not found"));
+
+        var user = userRepository.findById(d.getUserId()).orElse(null);
+        var items = portfolioRepo.findAllByDesignerIdAndDeletedAtIsNullOrderByCreatedAtAsc(d.getId())
+                .stream().map(it -> new PortfolioItemRes(it.getId(), it.getImageUrl(), it.getCaption())).toList();
+
+        return mapToRes(d, user, items);
     }
 
     @Transactional(readOnly = true)
-    public List<DesignerResponse> getAllDesignersByStudio(UUID studioId) {
-        return designerRepository.findAllActiveByHairStudioId(studioId).stream()
-                .map(d -> {
-                    User u = userRepository.findById(d.getUserId())
-                            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-                    return mapToRes(d, u);
-                })
-                .collect(Collectors.toList());
+    public List<PortfolioItemRes> getPortfolio(UUID designerId) {
+        return portfolioRepo.findAllByDesignerIdAndDeletedAtIsNullOrderByCreatedAtAsc(designerId)
+                .stream()
+                .map(p -> new PortfolioItemRes(p.getId(), p.getImageUrl(), p.getCaption()))
+                .toList();
     }
 
-    // ----------------------------------------------------------------------
-    // DELETE (soft)
-    // ----------------------------------------------------------------------
-    public void deleteDesigner(UUID designerId) {
+    /* ===================== DELETE (SOFT) ===================== */
+
+    /** Studio deletes its own designer (SOFT DELETE only) */
+    public void deleteDesigner(HttpServletRequest request, UUID designerId) {
+        ensureStudioRole();
+        UUID studioId = getStudioIdFromCurrentStudio();
+
         DesignerDetail d = designerRepository.findActiveById(designerId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Designer not found or already deleted"));
-        d.setDeletedAt(Instant.now());
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Designer not found"));
+
+        if (!Objects.equals(studioId, d.getHairStudioId())) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Designer does not belong to your studio");
+        }
+        softDelete(d.getId()); // BaseEntity.deletedAt ga vaqt yoziladi
+    }
+
+    /* ===================== PORTFOLIO ===================== */
+
+    /** Portfolio add (Studio of this designer, or the designer himself) */
+    public List<PortfolioItemRes> addPortfolioItems(HttpServletRequest request, UUID designerId, PortfolioAddReq req) {
+        // Studio yoki o‘zi – bu tekshiruvni controller darajasida role bilan cheklash mumkin.
+        var d = designerRepository.findActiveById(designerId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Designer not found"));
+
+        List<String> paths = Optional.ofNullable(req.paths()).orElseGet(List::of);
+        List<String> captions = Optional.ofNullable(req.captions()).orElseGet(List::of);
+
+        if (paths.isEmpty()) return getPortfolio(designerId);
+
+        List<UUID> newIds = new ArrayList<>();
+        IntStream.range(0, paths.size()).forEach(i -> {
+            String url = "/uploads/" + paths.get(i); // frontend /api/uploads dan olgan relPath
+            String caption = (i < captions.size()) ? captions.get(i) : null;
+
+            DesignerPortfolioItem item = DesignerPortfolioItem.builder()
+                    .designerId(designerId)
+                    .imageUrl(url)
+                    .caption(caption)
+                    .build();
+            portfolioRepo.save(item);
+            newIds.add(item.getId());
+        });
+
+        List<UUID> order = Optional.ofNullable(d.getPortfolioItemIds()).orElseGet(ArrayList::new);
+        order.addAll(newIds);
+        d.setPortfolioItemIds(order);
         update(d);
+
+        return getPortfolio(designerId);
     }
 
-    // ----------------------------------------------------------------------
-    // Helpers
-    // ----------------------------------------------------------------------
-    private String generateUniqueDesignerCode() {
-        for (int i = 0; i < 5; i++) {
-            String code = IdGenerator.generateId("DS");
-            if (!designerRepository.existsByIdForLogin(code)) return code;
-        }
-        throw new ResponseStatusException(HttpStatus.SERVICE_UNAVAILABLE, "Failed to generate unique login code");
+    /* ===================== Helpers ===================== */
+
+    private void ensureStudioRole() {
+        var auth = SecurityContextHolder.getContext().getAuthentication();
+        boolean ok = auth != null && auth.getAuthorities() != null &&
+                auth.getAuthorities().stream().anyMatch(a -> "ROLE_HAIR_STUDIO".equals(a.getAuthority()));
+        if (!ok) throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only studio can perform this action");
     }
 
-    private UUID extractUserIdFromToken() {
-        String authHeader = request.getHeader("Authorization");
-        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
-            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Missing or invalid Authorization header");
+    private UUID getCurrentUserIdOrThrow() {
+        var auth = SecurityContextHolder.getContext().getAuthentication();
+        if (auth == null || auth.getPrincipal() == null) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "No current user");
         }
-        String token = authHeader.substring(7).trim();
-        if (!jwtProvider.validateToken(token)) {
-            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Invalid or expired token");
+        try {
+            return UUID.fromString(auth.getPrincipal().toString());
+        } catch (Exception e) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Invalid principal");
         }
-        return UUID.fromString(jwtProvider.getUserId(token));
     }
 
-    private List<UUID> distinctIds(List<UUID> ids) {
-        if (ids == null) return Collections.emptyList();
-        return new ArrayList<>(new LinkedHashSet<>(ids));
+    private UUID getStudioIdFromCurrentStudio() {
+        UUID ownerUserId = getCurrentUserIdOrThrow();
+        var list = hairStudioRepo.findActiveByUserIdOrderByUpdatedDesc(ownerUserId, PageRequest.of(0, 1));
+        if (list.isEmpty()) throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Studio not found for this user");
+        return list.get(0).getId();
     }
 
-    // Mapping: join user + resolve portfolio items (ordered)
-    private DesignerResponse mapToRes(DesignerDetail d, User u) {
-        List<UUID> ids = Optional.ofNullable(d.getPortfolioItemIds()).orElseGet(List::of);
+    private static final SecureRandom RND = new SecureRandom();
+    private String generateDesignerLoginCode() {
+        // DS-ABCDE-12345
+        String letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+        StringBuilder sb = new StringBuilder();
+        for (int i = 0; i < 5; i++) sb.append(letters.charAt(RND.nextInt(letters.length())));
+        int digits = 10000 + RND.nextInt(90000);
+        return "DS-" + sb + "-" + digits;
+    }
 
-        List<DesignerPortfolioItem> items = ids.isEmpty()
-                ? List.of()
-                : portfolioRepository.findAllByIdIn(ids); // assumes you created this repo method
-
-        // keep order as in ids
-        Map<UUID, DesignerPortfolioItem> byId = items.stream()
-                .collect(Collectors.toMap(DesignerPortfolioItem::getId, it -> it));
-        List<PortfolioItemRes> portfolio = new ArrayList<>();
-        for (UUID id : ids) {
-            DesignerPortfolioItem it = byId.get(id);
-            if (it != null && it.getDeletedAt() == null) {
-                portfolio.add(new PortfolioItemRes(it.getId(), it.getImageUrl(), it.getCaption()));
-            }
-        }
-
+    private DesignerResponse mapToRes(DesignerDetail d, User user, List<PortfolioItemRes> items) {
         return new DesignerResponse(
                 d.getId(),
                 d.getUserId(),
                 d.getHairStudioId(),
                 d.getIdForLogin(),
-                u.getPhone(),
-                u.getRole(),          // Role lives on User
+                user != null ? Role.valueOf(user.getPhone()) : null,
+                user != null ? String.valueOf(user.getRole()) : null,
                 d.getBio(),
-                portfolio,
+                items,
                 d.getCreatedAt(),
                 d.getUpdatedAt()
         );
